--- a/.classpath
+++ b/.classpath
@@ -63,5 +63,6 @@
 	<classpathentry kind="lib" path="D:/selenium file/selenium-server-3.9.1/libs/xalan-2.7.2.jar"/>
 	<classpathentry kind="lib" path="D:/selenium file/selenium-server-3.9.1/libs/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="D:/selenium file/selenium-server-3.9.1/libs/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
